<resources>
    <string name="app_name">Gold Market</string>

    <string name="button_begin">Mulai</string>
    <string name="welcome_text1_begin">Selamat Datang</string>
    <string name="welcome_text2_begin">Nabung emas? Disini saja</string>
    <string name="welcome_image">Welcome Image</string>

    <string name="registration_text">Registrasi</string>
    <string name="first_name_label">Nama Depan</string>
    <string name="last_name_label">Nama Belakang</string>
    <string name="email_label">Email</string>
    <string name="password_label">Kata Kunci</string>
    <string name="register_header_label">Daftar</string>

    <string name="have_account_label">Sudah memiliki akun?</string>
    <string name="signin_label"><u><b>Sign In</b></u></string>

    <string name="signin_header_label">Sign In</string>
    <string name="no_have_account_label">Belum memiliki akun?</string>
    <string name="register_label"><u><b>Daftar</b></u></string>

    <string name="nav_home_label">Home</string>
    <string name="nav_history_label">History</string>
    <string name="nav_profile_label">Profile</string>


    <string name="loading_label">Harap tunggu...</string>
    <string name="tc_label">Syarat &amp; Ketentuan</string>

    <string name="personal_label">Data Pribadi</string>
    <string name="fullName_label">Nama Lengkap</string>
    <string name="address_label">Alamat</string>
    <string name="status_label">Status</string>
    <string name="upload_id_label">Upload KTP</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="zero_value_label">0.0</string>
    <string name="gram_format">%.4f gram</string>
    <string name="gram_format_2">%.4f</string>
    <string name="number_format">Rp %,.0f</string>
</resources>